<resources>
    <string name="app_name">SherikaFaysonTemperatureConversion</string>
    <string name="temperature_converter">Sherika Fayson - Temperature Conversion</string>
    <string name="convert">Convert</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="result">Result:</string>
    <string name="_0_00">0.00</string>
    <string name="enter_temperature">Enter Temperature</string>
</resources>